[package]
name = "ms-converter"
version = "0.2.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "Fast converter various time formats into milliseconds."
license="MIT"
keywords = ["ms", "milliseconds", "converter"]
categories = ["date-and-time"]
readme = "README.md"
documentation = "https://github.com/Mnwa/ms"
homepage = "https://github.com/Mnwa/ms"
repository = "https://github.com/Mnwa/ms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"