[package]
name = "ms-converter"
version = "1.1.1"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "Fast abstraction for converting human-like times into milliseconds."
license="MIT"
keywords = ["ms", "milliseconds", "converter"]
categories = ["date-and-time"]
readme = "README.md"
documentation = "https://docs.rs/ms-converter/"
homepage = "https://mnwa.github.io/ms/"
repository = "https://github.com/Mnwa/ms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]